sugar/tests/fail/cut_tyless.mx
|- connect
    { a -> a
    ; b -> b
    }
